More index fixes

--- a/tex/1.tex
+++ b/tex/1.tex
@@ -483,8 +483,7 @@ u0 = Expression("1 + x[0]*x[0] + 2*x[1]*x[1]")
 \end{python}
 
 The information about where to apply the \emp{u0} function as boundary
-condition is coded in a function \emp{u0\_boundary}: \index{boundary
-specification (function)}
+condition is coded in a function \emp{u0\_boundary}:
 \begin{python}
 def u0_boundary(x, on_boundary):
     return on_boundary
@@ -945,7 +944,7 @@ Mesh information can be gathered from the \emp{mesh} object, e.g.,
   and \emp{print mesh} is actually the same as \emp{print str(mesh)}.
 \end{itemize}
 All mesh objects are of type \emp{Mesh} so typing the command \emp{pydoc
-dolfin.Mesh}\index{pydoc} in a terminal window will give a list
+dolfin.Mesh}\index{\emp{pydoc}} in a terminal window will give a list
 of methods\footnote{A method in Python (and other
   languages supporting the class construct) is simply a function in a
   class.} that can be called through any \emp{Mesh} object. In fact,
@@ -1393,7 +1392,7 @@ grad_u_x_array = grad_u_x.vector().array()
 grad_u_y_array = grad_u_y.vector().array()
 \end{python}
 The degrees of freedom of the \emp{grad\_u} vector field can also be
-reached by \index{degrees of freedom array!vector field}
+reached by
 \begin{python}
 grad_u_array = grad_u.vector().array()
 \end{python}
@@ -1822,7 +1821,7 @@ is \emp{-p*dot(nabla\_grad(u), n)*ds(i)}.
 \subsection{Visualization of structured mesh data}
 \label{langtangen:structviz}
 \index{structured mesh}
-\index{visualization, structured mesh}
+\index{visualization!of structured mesh}
 
 When finite element computations are done on a structured rectangular
 mesh, maybe with uniform partitioning, VTK-based tools for completely
@@ -2080,7 +2079,7 @@ while the Neumann condition
 %%
 is applied to the remaining sides $y=0$ and $y=1$.  The Neumann condition
 is also known as a \emph{natural boundary condition} (in contrast to an
-essential boundary condition).  \index{Neumann boundary conditions}
+essential boundary condition).  \index{boundary condition!Neumann}
 
 Let $\Gamma_{\mathrm{D}}$ and $\Gamma_{\mathrm{N}}$ denote the parts of $\partial\Omega$ where
 the Dirichlet and Neumann conditions apply, respectively.  The complete
@@ -2654,7 +2653,6 @@ pedagogical advantages).
 \subsection{Picard iteration}
 \label{langtangen:nonlinear:Picard}
 \index{Picard iteration}
-\index{successive substitutions}
 
 Picard iteration is an easy way of handling nonlinear PDEs: we simply
 use a known, previous solution in the nonlinear terms so that these
@@ -4015,7 +4013,7 @@ mesh = UnitSphere(10)
 
 \subsection{Transforming mesh coordinates}
 \label{langtangen:mesh:transform:cyl}
-\index{mesh transformations}
+\index{mesh!transformation}
 \index{coordinate stretching}
 \index{coordinate transformation}
 
@@ -4654,7 +4652,7 @@ Below we explain some key terms used in this tutorial.
 
 Most classes in \fenics{} have an explanation of the purpose and usage
 that can be seen by using the general documentation command \emp{pydoc}
-for Python objects. You can type\index{pydoc}
+for Python objects. You can type\index{\emp{pydoc}}
 \begin{progoutput}
 pydoc dolfin.X
 \end{progoutput}
