--- a/tex/12.tex
+++ b/tex/12.tex
@@ -4,6 +4,8 @@
               {Robert C. Kirby and Anders Logg}
               {kirby-3}
 
+\index{FErari}
+
 In Chapter~\ref{chap:kirby-8}, we presented a framework for efficient
 evaluation of multilinear forms based on expressing the multilinear
 form as a special tensor contraction. This allows generation of
