--- a/tex/13.tex
+++ b/tex/13.tex
@@ -4,6 +4,8 @@
               {Robert C. Kirby}
               {kirby-2}
 
+\index{FIAT}
+
 The FIAT project~\citep{Kirby2004,Kirby2006} implements the
 mathematical framework described in Chapter~\ref{chap:kirby-1} as a
 Python package, working mainly in terms of numerical linear algebra.
