--- a/tex/14.tex
+++ b/tex/14.tex
@@ -4,6 +4,8 @@
               {Ilmar M. Wilbers, Kent-Andre Mardal and Martin S. Aln{\ae}s}
               {wilbers}
 
+\index{Instant}
+
 Instant is a small Python module for just-in-time (JIT)\index{JIT}
 compilation (or inlining) of C/C++ code. Instant accepts plain C/C++
 code and is therefore conveniently combined with the code generating
