--- a/tex/16.tex
+++ b/tex/16.tex
@@ -4,6 +4,8 @@
               {Martin Sandve Aln\ae{}s, Anders Logg and Kent-Andre Mardal}
               {alnes-2}
 
+\index{UFC}
+
 A central component of FEniCS is the UFC interface (Unified
 Form-assembly Code). UFC is an interface between problem-specific and
 general-purpose components of finite element programs. In particular,
@@ -130,7 +132,6 @@ over an interior facet~$S^0$ as an \emph{interior facet integral}
 %------------------------------------------------------------------------------
 \section{The UFC interface}
 \label{sec:alnes-2:ufc:syntax}
-\index{UFC interface}
 
 \begin{figure}
 \bwfig
