--- a/tex/17.tex
+++ b/tex/17.tex
@@ -44,7 +44,6 @@
               {alnes-1}
 %\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
 
-\index{Unified Form Language}
 \index{UFL}
 \index{variational form}
 \index{weak form}
@@ -377,7 +376,7 @@ result in a mixed element with three direct subelements, but rather
 \index{\emp{Integral}}
 \index{\emp{Measure}}
 \index{form}
-\index{integrals}
+\index{integral}
 \index{interior measure}
 \index{cell integral}
 \index{boundary measure}
@@ -510,7 +509,6 @@ as \emp{cell.d}.
 \index{form!argument of}
 \index{function}
 \index{basis function}
-\index{coefficient function}
 \index{coefficient}
 \index{\emp{Argument}}
 \index{\emp{TestFunction}}
@@ -581,7 +579,6 @@ f0, f1 = Coefficients(V)
 %------------------------------------------------------------------------------
 \subsection{Index notation}
 \label{ufl:sec:indexnotation}
-\index{index}
 \index{index notation}
 \index{implicit summation}
 \index{\emp{Index}}
@@ -795,7 +792,7 @@ element-wise to tensors using e.g. \emp{elem\_op(sin, A)}.
 
 %------------------------------------------------------------------------------
 \subsection{Differential operators} \label{ufl:sec:differential}
-\index{differential operators}
+\index{differential operator}
 \index{\emp{Dx}}
 \index{\emp{dx}}
 \index{\emp{grad}}
@@ -1240,7 +1237,6 @@ while $u$ in $a(u, v)$ is represented by a \emp{Argument}.
 \index{\emp{Operator}}
 \index{terminal value}
 \index{operator}
-\index{program}
 \index{expression}
 \index{expression tree}
 \index{referential transparency}
@@ -1640,7 +1636,6 @@ V[8] = v_{-2} * v_{-1} * c_0 * w_1 ** 2
 
 %==============================================================================
 \section{Computing derivatives} \label{ufl:sec:ad}
-\index{computing derivatives}
 \index{automatic differentiation}
 \index{automatic differentiation!forward mode}
 \index{automatic differentiation!reverse mode}
