--- a/tex/2.tex
+++ b/tex/2.tex
@@ -23,7 +23,7 @@ element method as part of the FEniCS Project.
 %------------------------------------------------------------------------------
 \section{A simple model problem}
 \index{Poisson's equation}
-\index{boundary conditions}
+\index{boundary condition}
 
 In 1813, Sim\'eon Denis Poisson published in \emph{Bulletin de la
 soci\'et\'e philomatique} his famous equation as a correction of
@@ -266,7 +266,6 @@ solving a linear system $A U = b$, where now
 \end{equation}
 
 \index{Ladyzhenskaya--\babuska{}--Brezzi conditions}
-\index{LBB conditions}
 The finite element discretization~\eqref{eq:mixedsystem} is an example
 of a \emph{mixed method}. Such formulations require some care in
 selecting spaces that discretize the different function spaces, here
@@ -400,7 +399,7 @@ Section~\ref{sec:abstract,linear}, we recover the linear
 system~(\ref{eq:system,linearization}).
 
 \begin{example}[Nonlinear Poisson equation]
-\index{nonlinear Poisson equation}
+\index{Poisson's equation!nonlinear}
 
 As an example, consider the following nonlinear Poisson equation:
 \begin{equation} \label{eq:poisson,nonlinear}
@@ -859,7 +858,7 @@ elements~\citep{Ciarlet2002,BrennerScott2008}.
 
 %------------------------------------------------------------------------------
 \section{Finite element solvers}
-\index{linear solvers}
+\index{linear solver}
 
 Finite elements provide a powerful methodology for discretizing
 differential equations, but solving the resulting algebraic systems
