--- a/tex/30.tex
+++ b/tex/30.tex
@@ -23,7 +23,7 @@ through some salient code extracts.
 
 \enlargethispage{6pt}
 
-\index{discontinuities}
+\index{discontinuity}
 %------------------------------------------------------------------------------
 \section{Background}
 
