--- a/tex/32.tex
+++ b/tex/32.tex
@@ -119,7 +119,7 @@ basin.
 \section{The Landweber algorithm}
 \index{Landweber algorithm}
 \index{PDE constrained minimization}
-\index{duality arguments}
+\index{duality argument}
 \index{dual problem}
 
 In a slightly more abstract setting, the task is to minimize an
