--- a/tex/33.tex
+++ b/tex/33.tex
@@ -137,7 +137,7 @@ $\Omega$; see Figure~\ref{fig:hake:morphology} (B).
 
 \paragraph{Electro-diffusion.}
 \index{Fick's second law} \index{screening} \index{electro-diffusion}
-\index{advection--diffusion equation} \index{Gouy-Chapman} \index{Nernst-Planck
+\index{advection--diffusion equation} \index{Gouy-Chapman} \index{Nernst--Planck
   equation}
 
 We will use Fick's second law to model diffusion of \Ca in the dyadic
@@ -163,7 +163,7 @@ is given by:
 \end{equation}
 
 The \Ca flux in a solution in the presence of an electric field is
-governed by the Nernst-Planck equation,
+governed by the Nernst--Planck equation,
 \begin{equation}
   \label{eq:hake:nernst-planck}
   J = -\sigma\left(\nabla c-2\,cE\right),
@@ -276,8 +276,10 @@ distance to the center of the cytosol. In our model, we have used \Ds
 
 \subsection{Stochastic models of single channels}
 \label{sec:hake:stochastic-models}
-\index{stochastic channel} \index{Markov chain model} \index{discrete
-  state} \index{propensity function}
+\index{stochastic channel}
+\index{Markov chain model}
+\index{discrete state}
+\index{propensity function}
 
 Discrete and stochastic Markov chain models are used to describe
 single channel dynamics for the LCC and RyR. Such models are described
@@ -503,7 +505,7 @@ of the included LCC channel is presented below.
 \index{stabilization!streamline upwind Petrov--Galerkin}
 \index{stabilization!parameter}
 \index{stabilization!element P\'eclet number}
-\index{tetgen}
+\index{TetGen}
 
 It turns out that the algebraic system
 in~(\ref{eq:hake:algebraic-equation}) can be numerically unstable for
@@ -867,8 +869,9 @@ dyadic cleft is also demonstrated.
 \subsection{Stochastic system}
 
 \label{sec:hake:stochastic-system}
-\index{Gillespie method} \index{Markov chain model} \index{propensity
-  function} \index{channel transition} The stochastic evolution of the
+\index{Gillespie method} \index{Markov chain model}
+\index{propensity function}
+\index{channel transition} The stochastic evolution of the
 Markov chain models presented in Section
 \ref{sec:hake:stochastic-models} is determined by a modified Gillespie
 method \citep{Gillespie1977}, which resembles one presented in
