--- a/tex/34.tex
+++ b/tex/34.tex
@@ -460,7 +460,7 @@ combined_space = V_N * V_L
   rectangular waveguide problems considered here. The mesh corresponds
   to 64 triangular elements and it should be noted that only the interior
   of the waveguide is meshed.}
-  \index{dispersion curves}
+  \index{dispersion curve}
   \label{fig:lezar:rectangular_fenics_mesh}
 \end{figure}
 
@@ -574,7 +574,7 @@ and visualization of the resultant field components the process is
 slightly more complex.
 
 \paragraph{Dispersion curves.}
-\index{dispersion curves}
+\index{dispersion curve}
 
 For dispersion curves the computed value of the propagation constant
 ($\gamma = \alpha + j\beta$) is plotted as a function of the operating
@@ -779,7 +779,7 @@ excellent agreement between the analytical and computed results.
   indicating TE and TM modes, respectively. Note that the analytical
   $TE_{01}$ and $TE_{20}$ form a degenerate pair, as do the $TE_{11}$
   and $TM_{11}$ modes.}
-  \index{dispersion curves}
+  \index{dispersion curve}
   \label{fig:lezar:hollow_rectangular_dispersion_curves}
 \end{figure}
 \index{waveguide!hollow rectangular|)}
@@ -900,7 +900,7 @@ curves by the intersection of a curve with the $f_o$-axis.\pagebreak
  $1\text{m}\times~0.5\text{m}$ half-filled rectangular waveguide as shown
  in Figure~\ref{fig:lezar:half_filled_rectangular_guide}. Reference values
  for the first 4 modes from~\citet{Jin2002} are shown as $\blacksquare$.}
- \index{dispersion curves}
+ \index{dispersion curve}
  \label{fig:lezar:half_loaded_rectangular_dispersion_curves}
 \end{figure}
 \index{waveguide!half-loaded rectangular|)}
@@ -930,11 +930,10 @@ curves by the intersection of a curve with the $f_o$-axis.\pagebreak
  from~\citet{PelosiCoccioliSelleri1998} are shown as $\blacksquare$. The
  presence of complex mode pairs are indicated by $\blacktriangle$ and
  $\bullet$ and highlighted in grey.}
- \index{dispersion curves}
+ \index{dispersion curve}
  \label{fig:lezar:shielded_microstrip_dispersion_curves}
 \end{figure}
 \label{lezar:sec:shielded_microstrip|)}
-
 
 \paragraph{Dispersion analysis.}
 \index{waveguide!dispersion analysis}
