--- a/tex/6.tex
+++ b/tex/6.tex
@@ -235,7 +235,7 @@ are assembly over cells, exterior facets and interior facets.
 
 %------------------------------------------------------------------------------
 \section{Symmetric application of boundary conditions}
-\index{boundary condition!symmetric application}
+\index{boundary condition!symmetric application of}
 
 For symmetric problems, it is useful to be able to apply Dirichlet
 boundary conditions in a fashion that preserves the symmetry of the
