--- a/tex/FM1.tex
+++ b/tex/FM1.tex
@@ -165,3 +165,6 @@ Anders Logg, Kent-Andre Mardal and Garth N. Wells \\*
 \index{XML format|see{file formats}}
 \index{IPCS|see{incremental pressure correction}}
 \index{Ciarlet finite element definition|see{finite element}}
+\index{CSS|see{consistent splitting scheme}}
+\index{LBB conditions|see{Ladyzhenskaya--\babuska{}--Brezzi conditions}}
+\index{multilinear form|see{form}}}
