Some URL updates

--- a/tex/26.tex
+++ b/tex/26.tex
@@ -1123,7 +1123,7 @@ functions $f$ and~$g$. The process can be generalized for models with
 more complicated hardening behavior.  To aid the implementation of
 different models, a return mapping algorithm and support for quadrature
 point level history parameters is provided by the FEniCS Plasticity
-library (\url{https://launchpad.net/fenics-plasticity/}).  The library
+library (\url{https://launchpad.net/fenics-plasticity}).  The library
 adopts a polymorphic design, with the base class \emp{PlasticityModel}
 providing an interface for users to implement, and thereby supply
 functions for
