--- a/tex/29.tex
+++ b/tex/29.tex
@@ -1163,7 +1163,7 @@ adapted space and time discretization is obtained.
 
 \emp{CBC.Solve} is a collaboratively developed open source project
 (released under the GNU GPL) that is freely available from its source
-repository at \url{https://launchpad.net/cbc.solve/}. Its only
+repository at \url{https://launchpad.net/cbc.solve}. Its only
 dependency is a working FEniCS installation. The fluid--structure
 interaction solver presented in this chapter is available as CBC.Swing
 as part of CBC.Solve. The software is released with the goal that it
