--- a/tex/FM1.tex
+++ b/tex/FM1.tex
@@ -123,7 +123,7 @@ book, documentation, articles and presentations, visit the FEniCS
 Project web site at \url{http://fenicsproject.org}. Some of the
 chapters in this book are accompanied by supplementary material in the
 form of code examples. These code examples can be downloaded from
-\url{http://fenicsproject.org/book}.
+\url{http://fenicsproject.org/book/}.
 
 \vspace{1em}
 
