--- a/tex/2.tex
+++ b/tex/2.tex
@@ -1043,7 +1043,7 @@ depend on the accuracy of interpolation and the definition of
 $\|\cdot\|_V$. For the solution of Poisson's equation in $V = H^1_0$,
 we have $C = \alpha = 1$ and $p = q = 1$.
 
-\subsection{\emph{A posteriori} error analysis}
+\subsection{\emph{A~posteriori} error analysis}
 \index{error estimate!a posteriori}
 
 \paragraph{Energy norm error estimates.}
