--- a/tex/FM1.tex
+++ b/tex/FM1.tex
@@ -167,4 +167,4 @@ Anders Logg, Kent-Andre Mardal and Garth N. Wells \\*
 \index{Ciarlet finite element definition|see{finite element}}
 \index{CSS|see{consistent splitting scheme}}
 \index{LBB conditions|see{Ladyzhenskaya--\babuska{}--Brezzi conditions}}
-\index{multilinear form|see{form}}}
+\index{multilinear form|see{form}}
