Work on pagebreaks

--- a/tex/10.tex
+++ b/tex/10.tex
@@ -656,6 +656,7 @@ A \emp{MyNonlinearProblem} object is constructed using a linear form
 and \emp{BoundaryCondition} used in the example are discussed in more
 detail later.  The same \emp{MyNon-\break linearProblem} class can be defined
 in Python:
+\enlargethispage{12pt}
 %%
 \begin{python}
 class MyNonlinearProblem(NonlinearProblem):
@@ -2935,6 +2936,7 @@ databases by creating a new instance of the \emp{Parameters}
 class. The following code demonstrates how to create a new parameter
 database and adding to it a pair of integer-valued and floating-point
 valued parameters:
+\enlargethispage{12pt}
 %%
 \begin{c++}
 Parameters parameters("my_parameters");
@@ -3244,6 +3246,7 @@ and a \emp{ufc::dofmap}. These two objects, together with the mesh,
 are used to instantiate a \emp{cpp.FunctionSpace}. The following pseudo
 code illustrates the instantiation of a \emp{FunctionSpace} from the
 Python interface:
+\pagebreak
 %%
 \begin{python}
 class FunctionSpace(cpp.FunctionSpace):
@@ -3459,6 +3462,7 @@ is returned to the user.
 
 The \emp{assemble} function in the Python interface of DOLFIN enables
 a user to directly assemble a declared UFL form:
+\pagebreak
 %%
 \begin{python}
 mesh = UnitSquare(8, 8)
