--- a/tex/14.tex
+++ b/tex/14.tex
@@ -84,8 +84,6 @@ output.set_logging_level("DEBUG")
 %when building the module.  This example can be found in the
 %file \emp{examples/ex1.py}.
 
-
-\enlargethispage{12pt}
 \subsection{NumPy arrays}
 
 One basic problem with wrapping C and C++ code is how to handle
@@ -330,6 +328,7 @@ through these three different types of errors.
 Let us start by removing a \emp{";"} in the C++ code of
 \emp{ex2.py}, making the C++ compiler unable to compile the code. We will then get errors on the
 following form:
+\pagebreak
 \begin{progoutput}
 --- Instant: compiling ---
 In instant.recompile: The module did not compile,
@@ -519,6 +518,7 @@ NumPy arrays automatically.  The following code shows an example where
 we calculate the matrix-vector multiplication $x = Ab$. The integer
 matrix $A$ and double vector $b$ are marked as input, while the double
 vector $x$ is output. The code can be found in: \emp{ex5.py}.
+\pagebreak
 \begin{python}
 c_code = """
 void dot_c(int Am, int An, long* A, int bn, long* b, int xn, double* x)
@@ -564,8 +564,6 @@ In this case, the C function signature should look like:
 void sum (int m, int* mp, double* ar1, int n,
           int* np, double* ar2)
 \end{c++}
-
-\enlargethispage{12pt}
 
 \subsection{Module name, signature, and cache}\label{wilbers:sec:msc}
 
