--- a/tex/15.tex
+++ b/tex/15.tex
@@ -48,7 +48,8 @@ much more convenient in this language.
 GiNaC~\citep{BauerFrinkKreckel2000} is an open source C++ library
 for symbolic calculations.  It contains the tools for doing basic
 manipulations of polynomials like algebraic operations, differentiation,
-and integration.  The following example shows basic usage of the library,
+and integration.  The following example shows basic usage of the library:
+\enlargethispage{12pt}
 \begin{c++}
 // create a polynomial function
 symbol x("x");
