--- a/tex/19.tex
+++ b/tex/19.tex
@@ -754,7 +754,7 @@ this functionality is found in \emp{mesh\_pre.i}:
   }
 }
 \end{swigcode}
-Here we first ignore the C++ versions of the \emp{coordinates} and
+Here, we first ignore the C++ versions of the \emp{coordinates} and
 \emp{cells} methods. Then we re-implements them using the
 \emp{make\_numpy\_array} macro. This macro takes a pointer to a
 C-array, together with the dimension and size of that array. The last
@@ -762,9 +762,10 @@ argument is used to set the writable flag of the NumPy array. This
 flag is set to \emp{true} for \emp{coordinates} and false for
 \emp{cells}.
 
-In a similar fashion we use the \emp{make\_numpy\_array} macro to wrap
+In a similar fashion, we use the \emp{make\_numpy\_array} macro to wrap
 the connectivity information to Python. This is done with the
 following SWIG directives in the \emp{mesh\_pre.i} files.
+\pagebreak
 \begin{swigcode}
 %ignore dolfin::MeshConnectivity::operator();
 %extend dolfin::MeshConnectivity {
