--- a/tex/35.tex
+++ b/tex/35.tex
@@ -176,6 +176,7 @@ using the conjugate gradient method\index{conjugate gradient method}
 for various uniform refinements of the unit square.
 
 First of all, the ML preconditioner is constructed as follows,
+\enlargethispage{12pt}
 \begin{python}
 class ML(block_base):
     def __init__(self, A, pdes=1):
@@ -574,7 +575,6 @@ Creating the preconditioner in this example is completely analogous to
 the Stokes example except that we need three matrices based on three
 bilinear forms:
 \begin{python}
-
 # function spaces, trial and test functions, boundary conditions etc. are previously defined
 
 A = assemble((dot(u,v) + k*inner(grad(u),grad(v)))*dx)
@@ -592,7 +592,7 @@ L = assemble(dot(grad(p),grad(q))*dx)
 prec = block_mat([[ML(A),      0     ],
                   [0,     ML(L)+ML(M)]])
 \end{python}
-In Table~\ref{timestokes:ex} we show the condition number for the
+In Table~\ref{timestokes:ex}, we show the condition number for the
 time-dependent Stokes problem discretized with the
 $\mathrm{CG}_2-\mathrm{CG}_1$ method for various uniform mesh refinements and
 values of $k$. We have the same boundary conditions as for the Stokes
