More pagebreak fixes

--- a/tex/17.tex
+++ b/tex/17.tex
@@ -1990,6 +1990,7 @@ where each node is visited after its children.
 
 A more ``pythonic'' way to implement iteration over a collection of
 nodes is using generators.  A minimal implementation of this could be
+\enlargethispage{12pt}
 \begin{python}
 def post_traversal(root):
     for o in root.operands():
@@ -2318,6 +2319,7 @@ This pattern acts as a relabeling of the index objects, renaming $i_{8}$
 from inside $\ldots$ to $i_{10}$ on the outside.  When looking at the
 print of \emp{ad}, the result of the chain rule ($(fu)' = u f' + f u'$)
 can be seen as the \emp{Sum} of two \emp{Product} objects.
+\pagebreak
 \begin{progoutput}
 Sum
 (
@@ -2380,6 +2382,7 @@ The callable must take the spatial coordinates as input and return a
 floating point value.  If the function being mapped is a vector function,
 the callable must return a tuple of values instead.  These extensions
 can be seen in the following code:
+\pagebreak
 \begin{python}
 element = VectorElement("Lagrange", triangle, 1)
 c = Constant(triangle)
