--- a/tex/27.tex
+++ b/tex/27.tex
@@ -843,7 +843,7 @@ Figure~\ref{code:narayanan:statictwist}.
 \begin{figure}
 \bwfig
   \centering
-  \includegraphics[width=\largefig]{chapters/narayanan/images/png/twistedcube.png}
+  \includegraphics[width=0.6\textwidth]{chapters/narayanan/images/png/twistedcube.png}
   \caption{A hyperelastic cube twisted by 60 degrees.}
     \label{fig:narayanan:twistedcube}
 \end{figure}
