--- a/tex/35.tex
+++ b/tex/35.tex
@@ -703,11 +703,9 @@ B = assemble(dot(grad(p),v)*dx)
 C = assemble(dot(grad(q),u)*dx)
 D = assemble(p*q*dx)
 
-AA = block_mat([[A,  B],
-                [C, -D]])
+AA = block_mat([[A,  B], [C, -D]])
 bb = block_vec([0,0])
-
-L = collapse(A+B*InvDiag(D)*C)
+L = collapse(A + B*InvDiag(D)*C)
 \end{python}
 The complete code can be found in \emp{hodge.py}.
 %FIXME: hva med hodge9
