Add references and index to table of contents

--- a/book.tex
+++ b/book.tex
@@ -36,7 +36,7 @@
 % Chapters
 
 % For testing
-%\input{tex/35}\end{document}
+%\input{tex/2}\input{tex/BM1}\end{document}
 
 % Tutorial
 \input{tex/1}
