--- a/tex/BM1.tex
+++ b/tex/BM1.tex
@@ -1,6 +1,7 @@
 \bookmarksetup{startatroot}
 \addtocontents{toc}{\bigskip}
 
+%------------------------------------------------------------------------------
 \chapter*{List of authors}
 \addcontentsline{toc}{chapter}{List of authors}
 \addtocounter{chapter}{1}
@@ -374,8 +375,7 @@
               \ref{chap:logg-1} and
               \ref{chap:oelgaard-1}}
 
-
-
+%------------------------------------------------------------------------------
 \chapter*{GNU Free Documentation License}
 \addcontentsline{toc}{chapter}{GNU Free Documentation License}
 \addtocounter{chapter}{1}
@@ -879,8 +879,9 @@ recommend releasing these examples in parallel under your choice of
 free software license, such as the GNU General Public License,
 to permit their use in free software.
 
-
-
+%------------------------------------------------------------------------------
+% References
+\addcontentsline{toc}{chapter}{References}
 
 \begin{thebibliography}{467}
 \providecommand{\natexlab}[1]{#1}
@@ -3956,5 +3957,5 @@ O.~C. Zienkiewicz, R.~L. Taylor, and J.~Z. Zhu.
 
 \end{thebibliography}
 
-
+\addcontentsline{toc}{chapter}{Index}
 \printindex
