Some index fixes in Chapter 1

--- a/tex/1.tex
+++ b/tex/1.tex
@@ -885,7 +885,7 @@ Mesh information can be gathered from the \emp{mesh} object, e.g.,
   and \emp{print mesh} is actually the same as \emp{print str(mesh)}.
 \end{itemize}
 All mesh objects are of type \emp{Mesh} so typing the command \emp{pydoc
-dolfin.Mesh}\index{pydoc} in a terminal window will give a list
+dolfin.Mesh}\index{\emp{pydoc}} in a terminal window will give a list
 of methods\footnote{A method in Python (and other
   languages supporting the class construct) is simply a function in a
   class.} that can be called through any \emp{Mesh} object. In fact,
@@ -1386,7 +1386,7 @@ grad_u_x_array = grad_u_x.vector().array()
 grad_u_y_array = grad_u_y.vector().array()
 \end{python}
 The degrees of freedom of the \emp{grad\_u} vector field can also be
-reached by \index{degrees of freedom array!vector field}
+reached by
 \begin{python}
 grad_u_array = grad_u.vector().array()
 \end{python}
@@ -3171,7 +3171,7 @@ recently computed solution (\emp{Function}), and the unknown
 (\emp{TrialFunction}) as parameters:
 \index{derivative}
 \index{automatic differentiation}
-\index{jacobian}
+\index{Jacobian}
 \begin{python}
 du = TrialFunction(V)
 v  = TestFunction(V)
