Fix some more typos in Chapter 1

--- a/tex/1.tex
+++ b/tex/1.tex
@@ -323,7 +323,7 @@ is that the finite element method, with a rectangular domain uniformly
 partitioned into linear triangular elements, will exactly reproduce a
 second-order polynomial at the vertices of the cells, regardless of
 the size of the elements. This property allows us to verify the
-implementation by comparing the computed solution, called $u$ is this
+implementation by comparing the computed solution, called $u$ in this
 document (except when setting up the PDE problem), with the exact
 solution, denoted by $u_{\rm e}$: $u$ should equal
 $u_{\rm}$ to machine precision \emph{at the nodes}.
@@ -1021,7 +1021,7 @@ to find an analytical solution. In the limit $\sigma\rightarrow\infty$,
 $p\rightarrow A/(2\pi\sigma)$, which allows us to integrate an axi--symmetric
 version of the equation in the radial coordinate $r\in [0,R]$ and
 obtain $D(r)=(r^2-R^2)A/(8\pi\sigma T)$. This result gives
-a rought estimate of the characteristic size of the deflection:
+a rough estimate of the characteristic size of the deflection:
 $|D(0)|=AR^2/(8\pi\sigma T)$, which can be used to scale the deflection.
 With $R$ as characteristic length scale, we can derive the equivalent
 dimensionless problem on the unit circle,
@@ -1415,7 +1415,7 @@ named \emp{q} onto the \emp{FunctionSpace} or \emp{VectorFunctionSpace}
 named \emp{W}.
 Specifically, the previous code for
 projecting each component of \emp{grad(u)} onto
-the same sapce that we use for \emp{u}, can now be done by
+the same space that we use for \emp{u}, can now be done by
 a one--line call:
 \index{project}\index{projection}
 \begin{python}
@@ -3216,7 +3216,7 @@ an associated solver based on Newton's method. We also demonstrate
 how key parameters in
 Newton's method can be set, as well as the choice of
 solver and preconditioner, and associated parameters, for the
-linear system occuring in the Newton iteration.
+linear system occurring in the Newton iteration.
 \index{nonlinear problem}
 \index{\emp{NonlinearVariationalProblem}}
 \index{\emp{NonlinearVariationalSolver}}\vspace*{3pt}
@@ -4578,7 +4578,7 @@ electrophysiology.  Another project, CBC.RANS
 (\emp{https://launchpad.net/cbc.rans}), offers an environment for very
 flexible and easy implementation
 of Navier--Stokes solvers and turbulence
-\citet{Mortensen2011,Mortensen2011b}. For example,
+\citep{Mortensen2011,Mortensen2011b}. For example,
 CBC.RANS contains an elliptic relaxation model for turbulent flow
 involving 18 nonlinear PDEs. FEniCS proved to be an ideal environment
 for implementing such complicated PDE models.
