Fix pagebreaks in Chapter 1

--- a/tex/1.tex
+++ b/tex/1.tex
@@ -1773,6 +1773,7 @@ convergence rate.
 
 Running the program for third-degree elements results in the expected
 value~$r=4$:
+\enlargethispage{12pt}
 \begin{progoutput}
 h=1.25E-01 r=4.09
 h=6.25E-02 r=4.03
@@ -2286,6 +2287,7 @@ An alternative to is explicitly call functions for assembling the
 coefficient matrix $A$ and the right-side vector $b$, and then solve
 the linear system $AU=b$ with respect to the $U$ vector.
 Instead of \emp{solve(a == L, u, b)} we now write\index{\emp{assemble}}\index{linear system}
+\pagebreak
 \begin{python}
 A = assemble(a)
 b = assemble(L)
@@ -2362,6 +2364,7 @@ do computations on this matrix, such as computing the eigenvalues
 \emp{A} and \emp{b} to file in MATLAB format and invoke MATLAB or Octave to
 analyze the linear system.
 Dumping the arrays \emp{A} and \emp{b} to MATLAB format is done by
+\pagebreak
 \begin{python}
 import scipy.io
 scipy.io.savemat("Ab.mat", {"A": A, "b": b})
@@ -2903,6 +2906,7 @@ Dirichlet conditions for $u$, $\delta u$ must be zero at the boundaries
 where the Dirichlet conditions apply, in order for $u^{k+1}=u^k + \omega\delta u$ to fulfill
 the right Dirichlet values. We therefore define an additional list of
 Dirichlet boundary conditions objects for $\delta u$:
+\enlargethispage{12pt}
 \begin{python}
 Gamma_0_du = DirichletBC(V, Constant(0), left_boundary)
 Gamma_1_du = DirichletBC(V, Constant(0), right_boundary)
@@ -3849,6 +3853,7 @@ current time level, and let \emp{T\_1} be the corresponding function
 at one earlier time level.
 We are now ready to define the initial condition and the \emp{a} and
 \emp{L} forms of our problem:
+\pagebreak
 \begin{python}
 T_1 = interpolate(Constant(T_R), V)
 
@@ -4267,6 +4272,7 @@ integers (\emp{"uint"}) for numbering the subdomains.  The mesh entities
 of interest are the cells, which have dimension 2 in a two-dimensional
 problem (1 in 1D, 3 in 3D). The appropriate code for defining the
 \emp{MeshFunction} for two subdomains then reads
+\enlargethispage{12pt}
 \begin{python}
 subdomains = MeshFunction("uint", mesh, 2)
 # Mark subdomains with numbers 0 and 1
