Consistency fixes in section titles

--- a/tex/19.tex
+++ b/tex/19.tex
@@ -935,12 +935,12 @@ slice and pass it to \emp{\_\_getitem\_\_}. In the latter method, we
 check whether the \emp{indices} argument is a single item or not and
 calls upon the correct helper functions.
 
-\section{JIT compiling of \ufl forms, \emp{Expressions} and \emp{SubDomains}}
+\section{JIT compilation of \ufl forms, \emp{Expression}s and \emp{SubDomain}s}
 The DOLFIN Python interface makes extensive use of just in time (JIT) compilation;
 that is code that is compiled, linked and imported into Python using
 Instant, see Chapter~\ref{chap:wilbers}. This process is facilitated
 by employing the form compilers \ffc or \sfc that translates \ufl code
-into \ufc code.  In a similar fashion, DOLFIN enables JIT compiling
+into \ufc code.  In a similar fashion, DOLFIN enables JIT compilation
 of \emp{Expression}s and \emp{SubDomain}s.
 
 We provide two ways of defining an \emp{Expression} in DOLFIN via Python:
