--- a/tex/24.tex
+++ b/tex/24.tex
@@ -857,7 +857,7 @@ for different scenarios can be found in Table~\ref{tab:Re_We}.
   \label{tab:Re_We}
 \end{table}
 
-\section{Conclusion}
+\section{Conclusions}
 
 In this chapter, we have presented the use of FEniCS to simulate CSF
 flow in various idealized geometries representing the spinal cord and
