--- a/tex/27.tex
+++ b/tex/27.tex
@@ -1197,7 +1197,7 @@ the fish deforms elastically as it tumbles toward the right.
 }
 \end{figure}
 
-\section{Conclusion}
+\section{Conclusions}
 
 This chapter presented an overview of \twist, an automated
 computational framework for nonlinear elasticity. Beginning with
