--- a/tex/3.tex
+++ b/tex/3.tex
@@ -960,7 +960,7 @@ degrees of freedom above, we have that \citep[Proposition 3]{Nedelec1986}
 \end{equation}
 
 %------------------------------------------------------------------------------
-\section{$L^2$ elements}
+\section{$L^2$ finite elements}
 
 By $L^2$ elements, one usually refers to finite element spaces where
 the elements are not in $C^0$. Such elements naturally occur in mixed
