--- a/tex/32.tex
+++ b/tex/32.tex
@@ -537,7 +537,7 @@ without random noise, as shown in Figure~\ref{fig6}.
 \end{figure}
 
 %------------------------------------------------------------------------------
-\section{Results and conclusion}
+\section{Results and conclusions}
 
 The calibration of piecewise constant diffusion coefficients using
 local data in a small number of wells is a well behaved inverse
