--- a/tex/33.tex
+++ b/tex/33.tex
@@ -845,7 +845,7 @@ parallel solvers.
   \label{fig:hake:time-line}
 \end{figure}
 
-\section{\texttt{diffsim} an event-driven simulator}
+\section{\texttt{diffsim}: an event-driven simulator}
 \label{sec:hake:diffsim}
 \index{time stepping} \index{\texttt{diffsim}} \index{FEniCS Apps} In
 the DOLFIN scripts above, we show how a simple continuous solver can
