--- a/tex/34.tex
+++ b/tex/34.tex
@@ -952,7 +952,7 @@ should be noted that for lossy materials (not considered here),
 complex modes are expected but do not necessarily occur in conjugate
 pairs \citep{PelosiCoccioliSelleri1998}.
 
-\section{Conclusion.}
+\section{Conclusions}
 
 In this chapter, the solutions of cutoff and dispersion problems
 associated with electromagnetic waveguiding structures have been
