--- a/tex/35.tex
+++ b/tex/35.tex
@@ -738,7 +738,7 @@ $p$.
     formulation of the Hodge Laplacian.}  \label{table:hodge}
 \end{table}
 
-\section{Conclusion}
+\section{Conclusions}
 
 In this chapter we have demonstrated that advanced solution algorithms
 can be developed relatively easily by using CBC.Block and the Python
